src/objects/SalesRefundDetail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>TotalCredits</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges</label>
        <referenceTo>Project_Charges__c</referenceTo>
        <relationshipLabel>SalesRefundDetails</relationshipLabel>
        <relationshipName>SalesRefundDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>SalesRefundDetails</relationshipLabel>
        <relationshipName>SalesRefundDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesRefundHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesRefundHeader</label>
        <referenceTo>SalesRefundHeader__c</referenceTo>
        <relationshipLabel>SalesRefundDetails</relationshipLabel>
        <relationshipName>SalesRefundDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Debits__c</fullName>
        <label>Total Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SalesRefundDetail</label>
    <nameField>
        <label>SalesRefundDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesRefundDetails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>